--- a/pages/9346.html
+++ b/pages/9346.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1414,7 +1414,46 @@ margin-left: 0em;
 <p>This page is to provide non-technical or maybe semi-technical discussion of the nature and role of the <a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory</a> of fundamental <a class="existingWikiWord" href="/nlab/show/physics">physics</a> known as <em><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></em>. For more technical details and further pointers see at <em><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></em>.</p>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#faq">FAQ</a><ul><li><a href="#WhatIsStringTheory">What is string theory?</a><ul><li><a href="#WhyNopBranePerturbationTheory">Then why not consider perturbative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-brane scattering for any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>?</a></li></ul></li><li><a href="#WhatAreTheEquations">What are the equations of string theory?</a></li><li><a href="#why_is_string_theory_controversial">Why is string theory controversial?</a></li><li><a href="#HowDoesStringTheoryMakePredictions">Does string theory make predictions? How?</a><ul><li><a href="#AsideHowDoPhysicalTheorieyGenerallyMakePredictionsAnyway">Aside: How do physical theories generally make predictions, anyway?</a></li></ul></li><li><a href="#IsStringTheoryTestable">Is string theory testable?</a></li><li><a href="#IsStringTheoryCausal">Is string theory causal, given that it is not local on the string scale?</a></li><li><a href="#DoesSTPredictSupersymmetry">Does string theory predict supersymmetry?</a></li><li><a href="#WhatIsAStringVacuum">What is a string vacuum?</a></li><li><a href="#BackgroundDependence">How/why does string theory depend on “backgrounds”?</a></li><li><a href="#InsightInParticlePhysics">Did string theory provide any insight relevant in experimental particle physics?</a></li><li><a href="#InsightsIntoCosmology">Does string theory tell us anything about cosmology, such as the Big bang or cosmic inflation?</a></li><li><a href="#RelationshipBetweenQuantumFieldTheoryAndStringTheory">What is the relationship between string theory and quantum field theory?</a></li><li><a href="#NonConvergenceOfPerturbationSeries">Isn’t it fatal that the string perturbation series does not converge?</a></li><li><a href="#HowDoStringsModelMassiveParticles">How do strings model massive particles?</a></li><li><a href="#RelationToGravity">How is string theory related to the theory of gravity?</a></li><li><a href="#StabilityOfKKCompactification">Do the extra dimensions lead to instability of 4 dimensional spacetime?</a></li><li><a href="#WhatDoesItMeanToSayStringTheoryHasALandscapeOfSolutions">What does it mean to say that string theory has a “landscape of solutions”?</a></li><li><a href="#IsStringTheoryRigorous">Is string theory mathematically rigorous?</a></li><li><a href="#what_does_it_mean_to_say_that_string_theory_depends_on_miracles_such_as_anomaly_cancellation_and_avoidance_of_divergences">What does it mean to say that string theory depends on ‘miracles’, such as anomaly cancellation and avoidance of divergences?</a></li><li><a href="#HowDoesStringTheoryInvolveHomotopyTheory">How does string theory involve homotopy theory, higher geometry and higher category theory?</a></li></ul></li><li><a href="#further_expositions_introductions_and_lectures">Further expositions, introductions and lectures</a></li><li><a href="#references">References</a><ul><li><a href="#other_faqs">Other FAQs</a></li><li><a href="#textbooks_and_lectures">Textbooks and lectures</a></li></ul></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#faq'>FAQ</a></li>
+<ul>
+<li><a href='#WhatIsStringTheory'>What is string theory?</a></li>
+<ul>
+<li><a href='#WhyNopBranePerturbationTheory'>Then why not consider perturbative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-brane scattering for any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>?</a></li>
+</ul>
+<li><a href='#WhatAreTheEquations'>What are the equations of string theory?</a></li>
+<li><a href='#why_is_string_theory_controversial'>Why is string theory controversial?</a></li>
+<li><a href='#HowDoesStringTheoryMakePredictions'>Does string theory make predictions? How?</a></li>
+<ul>
+<li><a href='#AsideHowDoPhysicalTheorieyGenerallyMakePredictionsAnyway'>Aside: How do physical theories generally make predictions, anyway?</a></li>
+</ul>
+<li><a href='#IsStringTheoryTestable'>Is string theory testable?</a></li>
+<li><a href='#IsStringTheoryCausal'>Is string theory causal, given that it is not local on the string scale?</a></li>
+<li><a href='#DoesSTPredictSupersymmetry'>Does string theory predict supersymmetry?</a></li>
+<li><a href='#WhatIsAStringVacuum'>What is a string vacuum?</a></li>
+<li><a href='#BackgroundDependence'>How/why does string theory depend on “backgrounds”?</a></li>
+<li><a href='#InsightInParticlePhysics'>Did string theory provide any insight relevant in experimental particle physics?</a></li>
+<li><a href='#InsightsIntoCosmology'>Does string theory tell us anything about cosmology, such as the Big bang or cosmic inflation?</a></li>
+<li><a href='#RelationshipBetweenQuantumFieldTheoryAndStringTheory'>What is the relationship between string theory and quantum field theory?</a></li>
+<li><a href='#NonConvergenceOfPerturbationSeries'>Isn’t it fatal that the string perturbation series does not converge?</a></li>
+<li><a href='#HowDoStringsModelMassiveParticles'>How do strings model massive particles?</a></li>
+<li><a href='#RelationToGravity'>How is string theory related to the theory of gravity?</a></li>
+<li><a href='#StabilityOfKKCompactification'>Do the extra dimensions lead to instability of 4 dimensional spacetime?</a></li>
+<li><a href='#WhatDoesItMeanToSayStringTheoryHasALandscapeOfSolutions'>What does it mean to say that string theory has a “landscape of solutions”?</a></li>
+<li><a href='#IsStringTheoryRigorous'>Is string theory mathematically rigorous?</a></li>
+<li><a href='#what_does_it_mean_to_say_that_string_theory_depends_on_miracles_such_as_anomaly_cancellation_and_avoidance_of_divergences'>What does it mean to say that string theory depends on ‘miracles’, such as anomaly cancellation and avoidance of divergences?</a></li>
+<li><a href='#HowDoesStringTheoryInvolveHomotopyTheory'>How does string theory involve homotopy theory, higher geometry and higher category theory?</a></li>
+</ul>
+<li><a href='#further_expositions_introductions_and_lectures'>Further expositions, introductions and lectures</a></li>
+<li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#other_faqs'>Other FAQs</a></li>
+<li><a href='#textbooks_and_lectures'>Textbooks and lectures</a></li>
+</ul>
+</ul>
+</div>
+
 <h2 id="faq">FAQ</h2>
 
 <h3 id="WhatIsStringTheory">What is string theory?</h3>
@@ -1802,7 +1841,7 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">Pertubative string theory</a> is defined to be the <a class="existingWikiWord" href="/nlab/show/asymptotic+series">asymptotic</a> <a class="existingWikiWord" href="/nlab/show/perturbation+series">perturbation series</a> which are obtained by summing <a class="existingWikiWord" href="/nlab/show/correlators">correlators</a>/<a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> of a 2d <a class="existingWikiWord" href="/nlab/show/SCFT">superconformal field theory</a> of central charge -15 over all genera and moduli of (punctured) <a class="existingWikiWord" href="/nlab/show/super+Riemann+surfaces">super Riemann surfaces</a>.</p>
+<p><a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">Perturbative string theory</a> is defined to be the <a class="existingWikiWord" href="/nlab/show/asymptotic+series">asymptotic</a> <a class="existingWikiWord" href="/nlab/show/perturbation+series">perturbation series</a> which are obtained by summing <a class="existingWikiWord" href="/nlab/show/correlators">correlators</a>/<a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> of a 2d <a class="existingWikiWord" href="/nlab/show/SCFT">superconformal field theory</a> of central charge -15 over all genera and moduli of (punctured) <a class="existingWikiWord" href="/nlab/show/super+Riemann+surfaces">super Riemann surfaces</a>.</p>
 </li>
 
 <li>
@@ -2059,14 +2098,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  9, 2018 at 03:43:51.
+  Last revised on November 12, 2018 at 04:59:51.
   See the <a href="https://ncatlab.org/nlab/history/string theory FAQ" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+theory+FAQ" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+theory+FAQ/73" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(73 revisions)</span> | <a href="/nlab/show/diff/string+theory+FAQ" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+theory+FAQ" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+theory+FAQ" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+theory+FAQ/74" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(74 revisions)</span> | <a href="/nlab/show/diff/string+theory+FAQ" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+theory+FAQ" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/string theory FAQ/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
