--- a/pages/9880.html
+++ b/pages/9880.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -652,7 +652,7 @@ margin-left: 0em;
 </li>
 
 <li id="Marino15">
-<p><a class="existingWikiWord" href="/nlab/show/Marcos+Mari%C3%B1o">Marcos Mariño</a>, <em>Non-perturbative effects in string theory and AdS/CFT</em>, <a href="http://indico.ictp.it/event/a14251/">Spring School on Superstring Theory and Related Topics 2015</a> (<a class="existingWikiWord" href="/nlab/files/MarinoNonPerturbative.pdf" title="pdf">pdf</a>, <a href="http://indico.ictp.it/event/a14251/session/89/contribution/401/material/0/0.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Marcos+Mari%C3%B1o">Marcos Mariño</a>, <em>Non-perturbative effects in string theory and AdS/CFT</em>, <a href="http://indico.ictp.it/event/a14251/">Spring School on Superstring Theory and Related Topics 2015</a> (<a class="existingWikiWord" href="/nlab/files/MarinoNonPerturbative.pdf" title="pdf">pdf</a>, <a href="http://indico.ictp.it/event/a14251/session/89/contribution/401/material/0/0.pdf">pdf</a>, <a href="https://youtu.be/5hw6l-JSpc4?list=PLzYFBWfshN8eqXZFYg2jBZSii7lHaeyXJ">recording</a>)</p>
 </li>
 </ul>
 
@@ -674,6 +674,12 @@ margin-left: 0em;
 
 <ul>
 <li id="BeckerBeckerStrominger95"><a class="existingWikiWord" href="/nlab/show/Katrin+Becker">Katrin Becker</a>, <a class="existingWikiWord" href="/nlab/show/Melanie+Becker">Melanie Becker</a>, <a class="existingWikiWord" href="/nlab/show/Andrew+Strominger">Andrew Strominger</a>, <em>Five-branes, membranes and nonperturbative string theory</em>, Nucl. Phys. B 456, 130 (1995) (<a href="http://arxiv.org/abs/hep-th/9507158">hep-th/9507158</a>)</li>
+</ul>
+
+<p>Review includes</p>
+
+<ul>
+<li><a href="#Marino15">Marino 15</a></li>
 </ul>
 
 <p>Reviews specifically in <a class="existingWikiWord" href="/nlab/show/type+II+string+theory">type II string theory</a> include</p>
@@ -703,14 +709,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 10:35:51.
+  Last revised on November 12, 2018 at 05:14:21.
   See the <a href="https://ncatlab.org/nlab/history/non-perturbative effect" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/non-perturbative effect/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
