--- a/pages/17343.html
+++ b/pages/17343.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -4822,18 +4822,23 @@ margin-left: 0em;
 
 <p>Consider the second case, the first is <a class="existingWikiWord" href="/nlab/show/formal+dual">formally dual</a>.</p>
 
-<p>First Observe that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi><mo stretchy="false">(</mo><mi>Y</mi><mo>⊔</mo><mi>Y</mi><mo stretchy="false">)</mo><mo>≃</mo><mi>L</mi><mi>Y</mi><mo>⊔</mo><mi>L</mi><mi>Y</mi></mrow><annotation encoding="application/x-tex">L(Y \sqcup Y) \simeq L Y \sqcup L Y</annotation></semantics></math> because <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/left+adjoint">left adjoint</a> and hence preserves <a class="existingWikiWord" href="/nlab/show/colimits">colimits</a>, hence in particular <a class="existingWikiWord" href="/nlab/show/coproducts">coproducts</a>.</p>
+<p>First observe that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo>⊔</mo><mi>X</mi><mo stretchy="false">)</mo><mo>≃</mo><mi>L</mi><mi>X</mi><mo>⊔</mo><mi>L</mi><mi>X</mi></mrow><annotation encoding="application/x-tex">L(X \sqcup X) \simeq L X \sqcup L X</annotation></semantics></math> because <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/left+adjoint">left adjoint</a> and hence preserves <a class="existingWikiWord" href="/nlab/show/colimits">colimits</a>, hence in particular <a class="existingWikiWord" href="/nlab/show/coproducts">coproducts</a>.</p>
 
 <p>Hence</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>L</mi><mo stretchy="false">(</mo><mo lspace="0em" rspace="thinmathspace">X</mo><mo>⊔</mo><mi>X</mi><mover><mo>→</mo><mrow><mo>∈</mo><mi>Cof</mi></mrow></mover><mi>Cyl</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⊔</mo><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mover><mo>→</mo><mrow><mo>∈</mo><mi>Cof</mi></mrow></mover><mi>L</mi><mo stretchy="false">(</mo><mi>Cyl</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
-  L(\X \sqcup X \overset{\in Cof}{\to} Cyl(X))
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo>⊔</mo><mi>X</mi><mover><mo>→</mo><mrow><mo>∈</mo><mi>Cof</mi></mrow></mover><mi>Cyl</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⊔</mo><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mover><mo>→</mo><mrow><mo>∈</mo><mi>Cof</mi></mrow></mover><mi>L</mi><mo stretchy="false">(</mo><mi>Cyl</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  L(X \sqcup X \overset{\in Cof}{\to} Cyl(X))
   =
   (L(X) \sqcup L(X) \overset{\in Cof}{\to } L (Cyl(X)))
 
 </annotation></semantics></math></div>
 <p>is a cofibration.</p>
 
-<p>Second, with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi></mrow><annotation encoding="application/x-tex">Y</annotation></semantics></math> cofibrant then also <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>⊔</mo><mi>Cyl</mi><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Y \sqcup Cyl(Y)</annotation></semantics></math> is a cofibrantion, since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Y</mi><mo>→</mo><mi>Y</mi><mo>⊔</mo><mi>Y</mi></mrow><annotation encoding="application/x-tex">Y \to Y \sqcup Y</annotation></semantics></math> is a cofibration (lemma <a class="maruku-ref" href="#ComponentMapsOfCylinderAndPathSpaceInGoodSituation"></a>). Therefore by <a class="existingWikiWord" href="/nlab/show/Ken+Brown%27s+lemma">Ken Brown's lemma</a> (prop. <a class="maruku-ref" href="#KenBrownLemma"></a>) <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> preserves the weak equivalence <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Cyl</mi><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow><mo>∈</mo><mi>W</mi></mrow></mover><mi>Y</mi></mrow><annotation encoding="application/x-tex">Cyl(Y) \overset{\in W}{\longrightarrow} Y</annotation></semantics></math>.</p>
+<p>Second, with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> cofibrant <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>i</mi> <mn>0</mn></msub><mo lspace="verythinmathspace">:</mo><mi>X</mi><mo>→</mo><mi>X</mi><mo>⊔</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">i_0 \colon X \to X \sqcup X</annotation></semantics></math> is an acyclic cofibration (lemma <a class="maruku-ref" href="#ComponentMapsOfCylinderAndPathSpaceInGoodSituation"></a>), and so then is</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>i</mi> <mn>0</mn></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⟶</mo><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⊔</mo><mi>L</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  i_0 \; \colon \; L(X) \longrightarrow L(X) \sqcup L(X).
+
+</annotation></semantics></math></div>
+<p>Therefore by <a class="existingWikiWord" href="/nlab/show/two-out-of-three">two-out-of-three</a> (def. <a class="maruku-ref" href="#CategoryWithWeakEquivalences"></a>) <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> preserves the weak equivalence <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Cyl</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>→</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">Cyl(X) \to X</annotation></semantics></math>.</p>
 </div>
 
 <div class="num_prop" id="QuillenAdjunctionInducesAdjunctionOnHomotopyCategories">
@@ -10397,14 +10402,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 12:09:58.
+  Last revised on November 12, 2018 at 06:13:02.
   See the <a href="https://ncatlab.org/nlab/history/Introduction to Homotopy Theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Introduction+to+Homotopy+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Introduction+to+Homotopy+Theory/130" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(130 revisions)</span> | <a href="/nlab/show/diff/Introduction+to+Homotopy+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Introduction+to+Homotopy+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Introduction+to+Homotopy+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Introduction+to+Homotopy+Theory/131" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(131 revisions)</span> | <a href="/nlab/show/diff/Introduction+to+Homotopy+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Introduction+to+Homotopy+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Introduction to Homotopy Theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
