--- a/pages/10113.html
+++ b/pages/10113.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9268/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1019,6 +1019,7 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -1032,6 +1033,12 @@ margin-left: 0em;
 
 <p>Binding three quarks: <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a>.</p>
 
+<h2 id="properties">Properties</h2>
+
+<p>Comparison of light hadron <a class="existingWikiWord" href="/nlab/show/masses">masses</a> as see in accelertator <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> and in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a>-computer simulation (from <a href="#FodorHoelbling12">Fodor-Hoelbling 12</a>)</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/HadronMasses.jpg" width="490" />
+</center>
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -1042,9 +1049,19 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/proton+spin+crisis">proton spin crisis</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/flavour+anomaly">flavour anomaly</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
+
+<p>See also:</p>
+
+<ul>
+<li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Meson">Hadron</a></em></li>
+</ul>
 
 <p>Computation of the <a class="existingWikiWord" href="/nlab/show/mass">mass</a> of hadrons using <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> (see also <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>) is discussed in</p>
 
@@ -1057,15 +1074,13 @@ margin-left: 0em;
 <p>Science 322:1224-1227,2008 (<a href="https://arxiv.org/abs/0906.3599">arXiv:0906.3599</a>)</p>
 </li>
 
-<li>
+<li id="FodorHoelbling12">
 <p>Zoltan Fodor, Christian Hoelbling, <em>Light Hadron Masses from Lattice QCD</em>, Rev. Mod. Phys. 84, 449, (<a href="https://arxiv.org/abs/1203.4789">arXiv:1203.4789</a>)</p>
 </li>
-</ul>
 
-<p>See also:</p>
-
-<ul>
-<li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Meson">Hadron</a></em></li>
+<li>
+<p>S. Aoki et. al. <em>Review of lattice results concerning low-energy particle physics</em> (<a href="https://arxiv.org/abs/1607.00299">arXiv:1607.00299</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -1073,14 +1088,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 16:22:35.
+  Last revised on November 12, 2018 at 10:29:12.
   See the <a href="https://ncatlab.org/nlab/history/hadron" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/hadron/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
