--- a/pages/9687.html
+++ b/pages/9687.html
@@ -1171,6 +1171,10 @@ margin-left: 0em;
 
 <h4 id="general">General</h4>
 
+<ul>
+<li id="Wilson74"><a class="existingWikiWord" href="/nlab/show/Kenneth+Wilson">Kenneth Wilson</a>, <em>Confinement of quarks, Phys. Rev. D10, 2445, 1974 (<a href="https://doi.org/10.1103/PhysRevD.10.2445">doi:10.1103/PhysRevD.10.2445</a>)</em></li>
+</ul>
+
 <p>Textbook accounts include</p>
 
 <ul>
@@ -1332,14 +1336,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 10:36:35.
+  Last revised on November 12, 2018 at 10:15:08.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
