--- a/pages/7673.html
+++ b/pages/7673.html
@@ -1016,7 +1016,7 @@ margin-left: 0em;
 <p>A correspondence with orthogonal factorization systems is discussed in</p>
 
 <ul>
-<li>Clemens Berger, Ralph M. Kaufmann, <em>Comprehensive factorisation systems</em><a href="https://arxiv.org/abs/1710.09438">pdf</a></li>
+<li>Clemens Berger, Ralph M. Kaufmann, <em>Comprehensive factorisation systems</em> (<a href="https://arxiv.org/abs/1710.09438">pdf</a>)</li>
 </ul>
 
 <p>Display maps are discussed in</p>
@@ -1160,14 +1160,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 10:39:08.
+  Last revised on November 12, 2018 at 12:46:45.
   See the <a href="https://ncatlab.org/nlab/history/categorical model of dependent types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/categorical model of dependent types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
