--- a/pages/1594.html
+++ b/pages/1594.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3428/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3428/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -879,6 +879,18 @@ margin-left: 0em;
 <li>
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒢</mi></mrow><annotation encoding="application/x-tex">\mathcal{G}</annotation></semantics></math> any orbifold, then the <a class="existingWikiWord" href="/nlab/show/mapping+space">mapping space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>𝒢</mi> <mrow><mi>Π</mi><mo stretchy="false">(</mo><msup><mi>S</mi> <mn>1</mn></msup><mo stretchy="false">)</mo></mrow></msup><mo>=</mo><msup><mi>𝒢</mi> <mrow><mi>B</mi><mi>ℤ</mi></mrow></msup></mrow><annotation encoding="application/x-tex">\mathcal{G}^{\Pi(S^1)} = \mathcal{G}^{B\mathbb{Z}}</annotation></semantics></math> is again an orbifold, called the <a class="existingWikiWord" href="/nlab/show/inertia+orbifold">inertia orbifold</a>.</p>
 </li>
+
+<li>
+<p><span class="newWikiWord">lens spaces<a href="/nlab/new/lens+spaces">?</a></span></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ADE+singularities">ADE singularities</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/metric+cones">metric cones</a></p>
+</li>
 </ul>
 
 <h2 id="related_concepts">Related concepts</h2>
@@ -945,13 +957,13 @@ margin-left: 0em;
 
 <h3 id="general_2">General</h3>
 
-<p>Original sources on orbifolds include</p>
-
-<ul id="Satake">
-<li>I. Satake, <em>On a generalisation of the notion of manifold</em>, Proc. Nat. Acad. Sci. U.S.A. 42 (1956), 359–363.</li>
-</ul>
+<p>The concept originates in</p>
 
 <ul>
+<li id="Satake">
+<p>I. Satake, <em>On a generalisation of the notion of manifold</em>, Proc. Nat. Acad. Sci. U.S.A. 42 (1956), 359–363.</p>
+</li>
+
 <li>
 <p>I. Satake, <em>The Gauss–Bonnet theorem for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>-manifolds</em>, J. Math. Soc. Japan 9 (1957), 464–492.</p>
 </li>
@@ -960,6 +972,34 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/William+Thurston">William Thurston</a>, <em>Three-dimensional geometry and topology,</em> preliminary draft, University of Minnesota, Minnesota, (1992)</p>
 
 <p id="Thurston"> which in completed and revised form is available as his book: <em>The Geometry and Topology of Three-Manifolds;</em> in particular the orbifold discussion is in <a href="http://library.msri.org/books/gt3m/PDF/13.pdf">chapter 13</a>.</p>
+</li>
+</ul>
+
+<p>Survey of basic orbifold theory:</p>
+
+<ul>
+<li id="Kaye07">
+<p>Adam Kaye, <em>Two-Dimensional Orbifolds</em>, 2007 (<a href="http://www.math.uchicago.edu/~may/VIGRE/VIGRE2007/REUPapers/FINALFULL/Kaye.pdf">pdf</a>)</p>
+</li>
+
+<li id="Porti09">
+<p>Joan Porti, <em>An introduction to orbifolds</em>, 2009 (<a href="http://mat.uab.es/~porti/orbifoldLeiden.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p>Daryl Cooper, Craig Hodgson, Steve Kerckhoff, <em>Three-dimensional Orbifolds and Cone-Manifolds</em>, MSJ Memoirs Volume 5, 2000 (<a href="https://web.math.ucsb.edu/~cooper/37.pdf">pdf</a>, <a href="https://projecteuclid.org/euclid.msjm/1389985812">euclid:1389985812</a>)</p>
+</li>
+</ul>
+
+<p>On orbifolds with <a class="existingWikiWord" href="/nlab/show/Riemannian+metric">Riemannian metric</a> and as singular limits of <a class="existingWikiWord" href="/nlab/show/Riemannian+manifolds">Riemannian manifolds</a> (such as <a class="existingWikiWord" href="/nlab/show/metric+cones">metric cones</a>):</p>
+
+<ul>
+<li>
+<p>Christian Lange, <em>Orbifolds from a metric viewpoint</em> (<a href="https://arxiv.org/abs/1801.03472">arXiv:1801.03472</a>)</p>
+</li>
+
+<li>
+<p>Renato G. Bettiol, Andrzej Derdzinski, Paolo Piccione, <em>Teichmüller theory and collapse of flat manifolds</em>, Annali di Matematica (2018) 197: 1247 (<a href="https://arxiv.org/abs/1705.08431">arXiv:1705.08431</a>, <a href="https://doi.org/10.1007/s10231-017-0723-7">doi:10.1007/s10231-017-0723-7</a>)</p>
 </li>
 </ul>
 
@@ -1082,14 +1122,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 23, 2018 at 04:47:45.
+  Last revised on November 13, 2018 at 03:58:37.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/49" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(49 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
