--- a/pages/1594.html
+++ b/pages/1594.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -829,7 +829,15 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>Where an ordinary <a class="existingWikiWord" href="/nlab/show/manifold">manifold</a> is a <a class="existingWikiWord" href="/nlab/show/space">space</a> locally modeled on <a class="existingWikiWord" href="/nlab/show/Cartesian+spaces">Cartesian spaces</a>, an <em>orbifold</em> is, more generally, a <a class="existingWikiWord" href="/nlab/show/space">space</a> that is locally modeled on <a class="existingWikiWord" href="/nlab/show/Lie+groupoid">smooth</a> <a class="existingWikiWord" href="/nlab/show/action+groupoids">action groupoids</a> (=“stack quotients”) of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <a class="existingWikiWord" href="/nlab/show/action">acting</a> on a <a class="existingWikiWord" href="/nlab/show/Cartesian+space">Cartesian space</a>.</p>
+<p>An <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> is much like a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a> but possibly with <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a> of the form of <a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a> of <a class="existingWikiWord" href="/nlab/show/group">group</a>-<a class="existingWikiWord" href="/nlab/show/actions">actions</a>.</p>
+<div style="float:right;margin:0 10px 10px 0;">
+<img src="https://ncatlab.org/nlab/files/OrbifoldTypes.jpg" width="240" />
+</div>
+<p>Where a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a> is a <a class="existingWikiWord" href="/nlab/show/space">space</a> locally modeled on <a class="existingWikiWord" href="/nlab/show/Cartesian+spaces">Cartesian spaces</a>/<a class="existingWikiWord" href="/nlab/show/Euclidean+spaces">Euclidean spaces</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^n</annotation></semantics></math>, an <em>orbifold</em> is, more generally, a <a class="existingWikiWord" href="/nlab/show/space">space</a> that is locally modeled on <a class="existingWikiWord" href="/nlab/show/Lie+groupoid">smooth</a> <a class="existingWikiWord" href="/nlab/show/action+groupoids">action groupoids</a> (<a class="existingWikiWord" href="/nlab/show/homotopy+quotients">homotopy quotients</a>) <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbb{R}^n\sslash G</annotation></semantics></math> of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/action">acting</a> on a <a class="existingWikiWord" href="/nlab/show/Cartesian+space">Cartesian space</a>.</p>
+
+<blockquote>
+<p>graphics grabbed from <a href="#HydeRamsdenRobins14">Hyde-Ramsden-Robins 14</a></p>
+</blockquote>
 
 <p>This turns out to be equivalent (<a href="#Moerdijk">Moerdijk</a>, <a href="#MoerdijkPronk">Moerdijk-Pronk</a>) to saying that an orbifold is a <a class="existingWikiWord" href="/nlab/show/proper+groupoid">proper</a> <a class="existingWikiWord" href="/nlab/show/%C3%A9tale+groupoid">étale</a> <a class="existingWikiWord" href="/nlab/show/Lie+groupoid">Lie groupoid</a>. (<a class="existingWikiWord" href="/nlab/show/Morita+equivalence">Morita equivalent</a> Lie groupoids correspond to the same orbifolds.)</p>
 
@@ -978,20 +986,24 @@ margin-left: 0em;
 <p>Survey of basic orbifold theory:</p>
 
 <ul>
+<li>
+<p>Daryl Cooper, Craig Hodgson, Steve Kerckhoff, <em>Three-dimensional Orbifolds and Cone-Manifolds</em>, MSJ Memoirs Volume 5, 2000 (<a href="https://web.math.ucsb.edu/~cooper/37.pdf">pdf</a>, <a href="https://projecteuclid.org/euclid.msjm/1389985812">euclid:1389985812</a>)</p>
+</li>
+
 <li id="Kaye07">
 <p>Adam Kaye, <em>Two-Dimensional Orbifolds</em>, 2007 (<a href="http://www.math.uchicago.edu/~may/VIGRE/VIGRE2007/REUPapers/FINALFULL/Kaye.pdf">pdf</a>)</p>
+</li>
+
+<li>
+<p>Michael Davis, <em>Lectures on orbifolds and reflection groups</em>, 2008 (<a href="https://math.osu.edu/sites/math.osu.edu/files/08-05-MRI-preprint.pdf">pdf</a>)</p>
 </li>
 
 <li id="Porti09">
 <p>Joan Porti, <em>An introduction to orbifolds</em>, 2009 (<a href="http://mat.uab.es/~porti/orbifoldLeiden.pdf">pdf</a>)</p>
 </li>
-
-<li>
-<p>Daryl Cooper, Craig Hodgson, Steve Kerckhoff, <em>Three-dimensional Orbifolds and Cone-Manifolds</em>, MSJ Memoirs Volume 5, 2000 (<a href="https://web.math.ucsb.edu/~cooper/37.pdf">pdf</a>, <a href="https://projecteuclid.org/euclid.msjm/1389985812">euclid:1389985812</a>)</p>
-</li>
 </ul>
 
-<p>On orbifolds with <a class="existingWikiWord" href="/nlab/show/Riemannian+metric">Riemannian metric</a> and as singular limits of <a class="existingWikiWord" href="/nlab/show/Riemannian+manifolds">Riemannian manifolds</a> (such as <a class="existingWikiWord" href="/nlab/show/metric+cones">metric cones</a>):</p>
+<p>On <span class="newWikiWord">Riemannian orbifolds<a href="/nlab/new/Riemannian+orbifolds">?</a></span>:</p>
 
 <ul>
 <li>
@@ -1000,6 +1012,10 @@ margin-left: 0em;
 
 <li>
 <p>Renato G. Bettiol, Andrzej Derdzinski, Paolo Piccione, <em>Teichmüller theory and collapse of flat manifolds</em>, Annali di Matematica (2018) 197: 1247 (<a href="https://arxiv.org/abs/1705.08431">arXiv:1705.08431</a>, <a href="https://doi.org/10.1007/s10231-017-0723-7">doi:10.1007/s10231-017-0723-7</a>)</p>
+</li>
+
+<li id="HydeRamsdenRobins14">
+<p>S. T. Hyde, S. J. Ramsden and V. Robins, <em>Unification and classification of two-dimensional crystalline patterns using orbifolds</em>, Acta Cryst. (2014). A70, 319-337 (<a href="https://doi.org/10.1107/S205327331400549X">doi:10.1107/S205327331400549X</a>)</p>
 </li>
 </ul>
 
@@ -1122,7 +1138,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 13, 2018 at 03:58:37.
+  Last revised on November 13, 2018 at 04:44:43.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
