--- a/pages/19113.html
+++ b/pages/19113.html
@@ -611,6 +611,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Platonic+2-group">Platonic 2-group</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/wallpaper+group">wallpaper group</a></p>
+</li>
 </ul>
 
 <h2 id="References">References</h2>
@@ -678,14 +682,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 10:31:59.
+  Last revised on November 13, 2018 at 05:43:23.
   See the <a href="https://ncatlab.org/nlab/history/finite rotation group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/finite+rotation+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+rotation+group/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/finite+rotation+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+rotation+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/finite rotation group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
