--- a/pages/741.html
+++ b/pages/741.html
@@ -587,6 +587,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/wallpaper+group">wallpaper group</a></p>
+</li>
+
+<li>
 <p>see also at <em><a class="existingWikiWord" href="/nlab/show/finite+abelian+group">finite abelian group</a></em>.</p>
 </li>
 </ul>
@@ -652,14 +656,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  6, 2018 at 07:35:03.
+  Last revised on November 13, 2018 at 05:13:05.
   See the <a href="https://ncatlab.org/nlab/history/finite group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finite+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+group/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/finite+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/finite+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+group/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/finite+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/finite group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
