--- a/pages/7189.html
+++ b/pages/7189.html
@@ -493,7 +493,7 @@ G\circ F,\;\eta,\;1_G\ast\epsilon\ast 1_F\rangle</annotation></semantics></math>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Giry+monad">Giry monad</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/idempotent+monad">idempotent monad</a></p>
 </li>
 </ul>
 
@@ -531,11 +531,19 @@ G\circ F,\;\eta,\;1_G\ast\epsilon\ast 1_F\rangle</annotation></semantics></math>
 
 <ul>
 <li>
+<p>C. Casacuberta, A. Frei, <em>Localizations as idempotent approximations to completions</em> , JPAA <strong>142</strong> (1999) no. 1 pp.25–33. (<a href="http://atlas.mat.ub.es/personals/casac/articles/cfre1.pdf">draft</a>)</p>
+</li>
+
+<li>
 <p>Yves Diers, <em>Complétion monadique</em> , Cah. Top. Géom. Diff. Cat. <strong>XVII</strong> no.4 (1976) pp.362-379. (<a href="http://www.numdam.org/item/?id=CTGDC_1976__17_4_363_0">numdam</a>)</p>
 </li>
 
 <li>
 <p>S. Katsumata, T. Sato, <span class="newWikiWord">T. Uustala<a href="/nlab/new/Tarmo+Uustala">?</a></span>, <em>Codensity lifting of monads and its dual</em> , arXiv:1810.07972 (2012). (<a href="https://arxiv.org/abs/1810.07972">abstract</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Joachim+Lambek">J. Lambek</a>, B. A. Rattray, <em>Localization and Codensity Triples</em> , Comm. Algebra <strong>1</strong> (1974) pp.145-164.</p>
 </li>
 </ul>
 </body></html>
@@ -544,14 +552,14 @@ G\circ F,\;\eta,\;1_G\ast\epsilon\ast 1_F\rangle</annotation></semantics></math>
 
 <div class="revisedby">
   <p>
-  Last revised on October 21, 2018 at 13:47:23.
+  Last revised on November 13, 2018 at 08:55:16.
   See the <a href="https://ncatlab.org/nlab/history/codensity monad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/codensity+monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/codensity+monad/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/codensity+monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/codensity+monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/codensity+monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/codensity+monad/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/codensity+monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/codensity+monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/codensity monad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
