--- a/pages/4767.html
+++ b/pages/4767.html
@@ -387,23 +387,29 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>[[!redirects logarithm]] [[!redirects logarithms]] [[!redirects logarithmic]]</p>
+<p>[[!redirects logarithm]]</p>
 
-<p>[[!redirects natural logarithm]] [[!redirects natural logarithms]]</p>
+<p>[[!redirects logarithms]]</p>
+
+<p>[[!redirects logarithmic]]</p>
+
+<p>[[!redirects natural logarithm]]</p>
+
+<p>[[!redirects natural logarithms]]</p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 13, 2018 at 13:30:53.
+  Last revised on November 13, 2018 at 14:35:28.
   See the <a href="https://ncatlab.org/nlab/history/logarithm" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/logarithm" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/logarithm/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/logarithm" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/logarithm" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/logarithm" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/logarithm/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/logarithm" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/logarithm" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/logarithm/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
