--- a/pages/1694.html
+++ b/pages/1694.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -311,9 +311,22 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
+
+<h1 id='section_table_of_contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#example_plural_nouns_and_capitalization'>Example: Plural nouns and capitalization</a></li>
+<li><a href='#caveat'>Caveat</a></li>
+<li><a href='#example_links_with_nonascii_symbols'>Example: Links with non-ASCII symbols</a></li>
+<li><a href='#caveat_2'>Caveat</a></li>
+<li><a href='#undoing_a_redirect'>Undoing a Redirect</a></li>
+</ul>
+</div>
+
+
 <p>Instiki now includes the ability to redirect pages.</p>
 
-<h1 id="example_plural_nouns_and_capitalization">Example: Plural nouns and capitalization</h1>
+<h2 id="example_plural_nouns_and_capitalization">Example: Plural nouns and capitalization</h2>
 
 <p>To redirect the plural</p>
 
@@ -334,22 +347,22 @@ margin-left: 0em;
 <p>For example, if you open <a class="existingWikiWord" href="/nlab/show/category">category</a> for editing and look at the bottom, you will find</p>
 
 <pre><code>[[!redirects categories]]
-&lt;nowiki]&lt;/nowiki]
+[[!redirects Category]]
 [[!redirects Categories]]</code></pre>
 
 <p>Therefore, <a class="existingWikiWord" href="/nlab/show/categories">categories</a>, <a class="existingWikiWord" href="/nlab/show/Category">Category</a>, and <a class="existingWikiWord" href="/nlab/show/Categories">Categories</a> all redirect to <a class="existingWikiWord" href="/nlab/show/category">category</a> now.</p>
 
 <h2 id="caveat">Caveat</h2>
 
-<p>Redirects only work if the desired redirected page <code>&lt;a class='existingWikiWord' href='/nlab/show/categories'&gt;categories&lt;/a&gt;</code> <em>does not already exist</em>.</p>
+<p>Redirects only work if the desired redirected page <code>[[categories]]</code> <em>does not already exist</em>.</p>
 
 <p>Don’t worry, this is a feature, not a bug, designed to avoid silly things like infinite redirect loops, etc.</p>
 
-<p>In the event that <code>&lt;a class='existingWikiWord' href='/nlab/show/categories'&gt;categories&lt;/a&gt;</code> does exist already, then it probably should not if <code>&lt;a class='existingWikiWord' href='/nlab/show/category'&gt;category&lt;/a&gt;</code> aready exists.</p>
+<p>In the event that <code>[[categories]]</code> does exist already, then it probably should not if <code>[[category]]</code> aready exists.</p>
 
-<p>If you run into this situation, you can help by transferring material from <code>&lt;span class='newWikiWord'&gt;existing pages&lt;a href='/nlab/new/existing+pages'&gt;?&lt;/a&gt;&lt;/span&gt;</code> to <code>&lt;span class='newWikiWord'&gt;existing page&lt;a href='/nlab/new/existing+page'&gt;?&lt;/a&gt;&lt;/span&gt;</code> and change the name of <code>&lt;span class='newWikiWord'&gt;existing pages&lt;a href='/nlab/new/existing+pages'&gt;?&lt;/a&gt;&lt;/span&gt;</code> to <code>&lt;span class='newWikiWord'&gt;existing pages &gt; history&lt;a href='/nlab/new/existing+pages+%3E+history'&gt;?&lt;/a&gt;&lt;/span&gt;</code>. Now the redirects will work <em>and</em> we maintain the history of any revisions that were made to <code>&lt;span class='newWikiWord'&gt;existing pages&lt;a href='/nlab/new/existing+pages'&gt;?&lt;/a&gt;&lt;/span&gt;</code>.</p>
+<p>If you run into this situation, you can help by transferring material from <code>[[existing pages]]</code> to <code>[[existing page]]</code> and change the name of <code>[[existing pages]]</code> to <code>[[existing pages &gt; history]]</code>. Now the redirects will work <em>and</em> we maintain the history of any revisions that were made to <code>[[existing pages]]</code>.</p>
 
-<h1 id="example_links_with_nonascii_symbols">Example: Links with non-ASCII symbols</h1>
+<h2 id="example_links_with_nonascii_symbols">Example: Links with non-ASCII symbols</h2>
 
 <p>Currently, there are many pages with titles that would ideally include symbols, e.g. <a class="existingWikiWord" href="/nlab/show/%28infinity%2C1%29-category">(infinity,1)-category</a>.</p>
 
@@ -365,7 +378,7 @@ margin-left: 0em;
 
 <pre><code>$(\infty,1)$-[[(infinity,1)-category|(infinity,1)-categories]]</code></pre>
 
-<p>which preserves the distinction between math and text but doesn't allow the link to cover the entire linking phrase.</p>
+<p>which preserves the distinction between math and text but doesn’t allow the link to cover the entire linking phrase.</p>
 
 <p>Currently, if you open <a class="existingWikiWord" href="/nlab/show/%28infinity%2C1%29-category">(infinity,1)-category</a> for editing and look at the bottom, you will see</p>
 
@@ -373,17 +386,17 @@ margin-left: 0em;
 [[!redirects (∞,1)-categories]]
 [[!redirects (infinity,1)-categories]]</code></pre>
 
-<p>This means that we can now simply insert links like <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-categories">(∞,1)-categories</a> and be redirected to <a class="existingWikiWord" href="/nlab/show/%28infinity%2C1%29-category">(infinity,1)-category</a>. The only downside here (compared to the previous alternative) is that math material is in the text font. (Some of us even write <code>$2$-&lt;a class='existingWikiWord' href='/nlab/show/2-category'&gt;category&lt;/a&gt;</code> for this reason.)</p>
+<p>This means that we can now simply insert links like <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-categories">(∞,1)-categories</a> and be redirected to <a class="existingWikiWord" href="/nlab/show/%28infinity%2C1%29-category">(infinity,1)-category</a>. The only downside here (compared to the previous alternative) is that math material is in the text font. (Some of us even write <code>$2$-[[2-category|category]]</code> for this reason.)</p>
 
 <h2 id="caveat_2">Caveat</h2>
 
 <p>The <code>?</code> symbol included in the link is not obtained via the itex syntax <code>$\infty$</code>. To actually include non-ASCII symbols in links, you either need to be an expert at unicode <em>or</em> simply find the ‘?’ symbol already displayed somewhere, copy it, and paste the symbol into the edit box. To see what I mean, you can edit this page to look at the source code for the link: <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-categories">(∞,1)-categories</a>.</p>
 
-<h1 id="undoing_a_redirect">Undoing a Redirect</h1>
+<h2 id="undoing_a_redirect">Undoing a Redirect</h2>
 
 <p>Occasionally you may come across a situation where a redirect exists for a link that you’d like to create a separate entry for. For example, <a class="existingWikiWord" href="/nlab/show/constructivism">constructivism</a> is currently redirected to <a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a>. If you’d prefer to have a separate entry for constructivism (to discuss the philosophy rather than the mathematical practice), you can simply edit <a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a> and remove the line (likely at the bottom of the edit box)</p>
 
-<pre><code>&lt;nowiki]&lt;/nowiki&gt;</code></pre>
+<pre><code>[[!redirects constructivism]]</code></pre>
 
 <p>Now you can create <a class="existingWikiWord" href="/nlab/show/constructivism">constructivism</a> as usual and any pages that had previously been redirected to <a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a> will now point to your new entry.</p>
 <hr />
@@ -394,7 +407,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 13, 2018 at 16:48:01.
+  Last revised on November 13, 2018 at 17:43:39.
   See the <a href="https://ncatlab.org/nlab/history/redirect" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
